<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dvsa.testing.framework</groupId>
    <artifactId>vol-functional-tests</artifactId>

    <version>4.0.1-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.version>3.13.0</maven.compiler.version>

        <active-support.version>2.5.14</active-support.version>
        <api-calls.version>3.0.1</api-calls.version>
        <uri-constructor.version>2.0.7</uri-constructor.version>

        <axe-scanner-version>2.11.0</axe-scanner-version>
        <allure-cucumber7-jvm.version>2.29.0</allure-cucumber7-jvm.version>
        <allure-report.version>2.29.0</allure-report.version>

        <slf4j.version>2.22.0</slf4j.version>
        <slf4j-log4j12.version>2.22.0</slf4j-log4j12.version>
        <commons-lang3.version>3.15.0</commons-lang3.version>
        <assertj-core-version>3.26.3</assertj-core-version>
        <hamcrest-version>1.3</hamcrest-version>

        <aspectj.version>1.9.21</aspectj.version>
        <build.helper.plugin.version>3.2.0</build.helper.plugin.version>
        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
        <apache-commons.version>1.12.0</apache-commons.version>
        <jsoup.version>1.18.3</jsoup.version>
        <gson.version>2.11.0</gson.version>
        <zt-zip.version>1.15</zt-zip.version>
        <java.version>17</java.version>
        <maven.compiler.release>17</maven.compiler.release>
        <jvmMemory>4000</jvmMemory>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.11.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-bom</artifactId>
                <version>7.20.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>dvsa-github-packages</id>
            <url>https://maven.pkg.github.com/dvsa/*</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-picocontainer</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-cucumber7-jvm</artifactId>
            <version>${allure-cucumber7-jvm.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-attachments</artifactId>
            <version>${allure-report.version}</version>
        </dependency>
        <dependency>
            <groupId>org.dvsa.testing.lib</groupId>
            <artifactId>active-support</artifactId>
            <version>${active-support.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.dvsa.testing.lib</groupId>
            <artifactId>accessibility-library</artifactId>
            <version>${axe-scanner-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${slf4j-log4j12.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core-version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${hamcrest-version}</version>
        </dependency>
        <dependency>
            <groupId>org.dvsa.testing.lib</groupId>
            <artifactId>vol-uri-constructor</artifactId>
            <version>${uri-constructor.version}</version>
        </dependency>
        <dependency>
            <groupId>org.zeroturnaround</groupId>
            <artifactId>zt-zip</artifactId>
            <version>${zt-zip.version}</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${apache-commons.version}</version>
        </dependency>
        <dependency>
            <groupId>org.dvsa.testing.framework</groupId>
            <artifactId>vol-api-calls</artifactId>
            <version>${api-calls.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.thedeanda</groupId>
            <artifactId>lorem</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.14</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>**/**.java</include>
                    </includes>
                    <argLine>
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                        -Xmx${jvmMemory}m
                    </argLine>
                    <rerunFailingTestsCount>1</rerunFailingTestsCount>
                    <forkCount>4</forkCount>
                    <parallel>methods</parallel>
                    <reuseForks>true</reuseForks>
                    <properties>
                        <!-- Work around. Surefire does not include enough
                             information to disambiguate between different
                             examples and scenarios. -->
                        <configurationParameters>
                            cucumber.junit-platform.naming-strategy=long
                        </configurationParameters>
                    </properties>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.12.0</version>
                <configuration>
                    <reportVersion>${allure-report.version}</reportVersion>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-test-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!--  Nexus Configuration  -->
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub dvsa Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/dvsa/vol-functional-tests</url>
        </repository>
    </distributionManagement>
</project>
